Fixed Cache Management mass-action checkbox alignment

--- a/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
@@ -1074,7 +1074,6 @@ body._in-resize {
     }
 
     .data-grid-checkbox-cell-inner {
-        display: unset;
         margin: @data-grid-checkbox-cell-inner__padding-top @data-grid-checkbox-cell-inner__padding-horizontal .9rem;
         padding: 0;
     }
